@@ -1,5 +1,10 @@
 Revision history for Perl extension XML::Xalan.
 
+Nov 30, 2001
+- Succesfully ported to Win32!
+- Updated README
+- Added more info on DocumentBuilder in XML::Xalan::Transformer pod.
+
 Nov 26,2001
 - Fixed warning inside content handler
 
